# open-metadata-hack

./: .gitignore  .mcp.json.example  2026-04-18-metadata-incident-copilot-expanded-design.md  2026-04-18-metadata-incident-copilot-expanded-plan.md  README.md
projects/main-submission/: .dockerignore  .env.example  Dockerfile  PITCH_AND_DEMO.md  README.md  RUNNING.md  docker-compose.yml  pyproject.toml
projects/main-submission/docs/: DEMO_WALKTHROUGH.md  INTEGRATION_SETUP.md  KNOWN_GAPS.md  OPENMETADATA_ALERT_SETUP.md  PROBLEM_AND_SOLUTION.md  TESTING.md
projects/main-submission/scripts/: run_demo.py  run_server.py  validate_live_openmetadata.py  verify.sh
projects/main-submission/tasks/: lessons.md  openmetadata-live-validation-2026-04-19.md  prototype-progress-reference.md  todo.md
projects/main-submission/tests/: test_adapter.py  test_ai_recommender.py  test_app.py  test_app_retry.py  test_bootstrap_smoke.py  test_brief.py  test_brief_renderer.py  test_config.py  test_context_resolver.py  test_contracts.py  test_create_tests_in_om.py  test_dead_letter_queue.py  test_delivery.py  test_delivery_queue.py  test_demo_harness.py  test_impact.py  test_impact_scorer.py  test_live_validation.py  test_mcp_facade.py  test_mcp_new_tools.py  test_mcp_transport_client.py  test_om_poller.py  test_openmetadata_client.py  test_orchestrator.py  test_owner_routing.py  test_rca_engine.py  test_service_e2e.py  test_slack_actions.py  test_slack_commands.py  test_slack_sender.py  test_slack_thread_reply.py  test_startup_validator.py  test_store.py  test_suggest_tests.py  (+4 more)
(+34 files in other folders)
