[project]
name = "metadata-incident-copilot"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "fastmcp>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
